--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
-<link rel="import" href="components/head.html?__inline">
+<!DOCTYPE html>
+<html lang="zh-cn">
 
-  <h1>你好，世界！</h1>
-  <a href="apply/index.html">功能申请</a><br/>
-  <a href="zhuake/index.html">抓客</a><br/>
-  <a href="yaoyue/index.html">邀约</a><br/>
-  <a href="menshi/index.html">门市</a><br/>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1.0, minimum-scale=1.0">
+	<!-- 设置 360 浏览器渲染模式：webkit -->
+	<meta name="renderer" content="webkit">
+	<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+	<!-- QQ 浏览器（X5 内核） -->
+	<meta name="x5-fullscreen" content="true">
+	<meta name="x5-page-mode" content="app">
+	<title>网销大师</title>
 
-  <script src="js/jquery-2.0.3.min.js"></script>
-  <script src="js/app-iframe.js"></script>
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/app.css">
+
+	<script src="js/jquery-2.0.3.min.js"></script>
+	<script src="js/app-iframe.js"></script>
+</head>
+
+<body>
+  
   <script>
     api.login();
   </script>
