--- a/menshi/index.html
+++ b/menshi/index.html
@@ -16,7 +16,7 @@
 	<div class="menu">
 		<a href="new.html" target="iframe" class="item">
 			<span class="icon glyphicon glyphicon-search"></span>
-			<span class="title">新客</span>
+			<span class="title">下发</span>
 		</a>
 		<a href="list.html" target="iframe" class="item">
 			<span class="icon glyphicon glyphicon-search"></span>
