--- a/yaoyue/operate-zhifu.html
+++ b/yaoyue/operate-zhifu.html
@@ -1,8 +1,4 @@
-<link rel="import" href="../components/head.html?__inline">
-
-<link rel="import" href="../components/common-header.html?__inline">
-
-<link rel="import" href="../components/menu-yaoyue.html?__inline">
+<link rel="import" href="../components/head-iframe.html?__inline">
 
 <div class="container">
   <div class="panel panel-primary">
@@ -35,4 +31,4 @@
 	</div>
 </div>
 
-<link rel="import" href="../components/foot.html?__inline">
+<link rel="import" href="../components/foot-iframe.html?__inline">
