--- a/menshi/mine-message.html
+++ b/menshi/mine-message.html
@@ -1,12 +1,14 @@
+<link rel="import" href="../components/head-iframe.html?__inline">
+
 <div class="panel panel-primary">
 	<div class="panel-body">
 		<div class="message-box">
-			<div class="title">客资确认提醒</div>
+			<div class="title">客资下发提醒</div>
 			<div class="date">9月20日</div>
 			<div class="content">
 				<div>客资名称：张晓安 渠道来源：官网-百度</div>
-				<div>客资状态：已经报备</div>
-				<div>邀约客服：天涯组-张晓雨</div>
+				<div>客资状态：客资预付已经下发</div>
+				<div>门店门市：金凯旋店-小敏</div>
 			</div>
       <div class="line"></div>
       <div class="detail">
@@ -15,3 +17,5 @@
 		</div>
 	</div>
 </div>
+
+<link rel="import" href="../components/foot-iframe.html?__inline">
