--- a/menshi/operate-dingdan.html
+++ b/menshi/operate-dingdan.html
@@ -5,11 +5,20 @@
 		<div class="panel-body">
 			<div class="operate-message">
 				<form action="list.html" class="form-horizontal form" role="form">
-					<div class="msg">退回</div>
+					<div class="msg">订单</div>
 					<div class="form-group">
-						<label for="call" class="col-xs-4 control-label left">退回理由</label>
+						<label class="col-xs-12 control-label left">选择付款方式</label>
+						<div class="col-xs-6">
+							<input type="text" class="form-control" placeholder="产品的类别">
+						</div>
+						<div class="col-xs-6">
+							<input type="text" class="form-control" placeholder="需要金额">
+						</div>
+					</div>
+					<div class="form-group">
+						<label for="call" class="col-xs-4 control-label left">支付金额</label>
 						<div class="col-xs-12">
-							<textarea class="form-control" rows="3"></textarea>
+							<input type="text" class="form-control" placeholder="支付的金额">
 						</div>
 					</div>
 					<div class="operate col-xs-10 col-xs-offset-1">
