--- a/menshi/operate-gaiqi.html
+++ b/menshi/operate-gaiqi.html
@@ -5,9 +5,18 @@
 		<div class="panel-body">
 			<div class="operate-message">
 				<form action="list.html" class="form-horizontal form" role="form">
-					<div class="msg">退回</div>
+					<div class="msg">改期</div>
 					<div class="form-group">
-						<label for="call" class="col-xs-4 control-label left">退回理由</label>
+						<label class="col-xs-12 control-label left">改新的到店时间</label>
+						<div class="col-xs-6">
+							<input type="text" class="form-control" placeholder="选择日期">
+						</div>
+            <div class="col-xs-6">
+							<input type="text" class="form-control" placeholder="填写具体日期">
+						</div>
+					</div>
+          <div class="form-group">
+						<label for="call" class="col-xs-4 control-label left">改期原因</label>
 						<div class="col-xs-12">
 							<textarea class="form-control" rows="3"></textarea>
 						</div>
