--- a/menshi/operate-zhuanyi.html
+++ b/menshi/operate-zhuanyi.html
@@ -1,15 +1,24 @@
 <link rel="import" href="../components/head-iframe.html?__inline">
 
 <div class="container">
-	<div class="panel panel-primary">
+  <div class="panel panel-primary">
 		<div class="panel-body">
 			<div class="operate-message">
 				<form action="list.html" class="form-horizontal form" role="form">
-					<div class="msg">退回</div>
+					<div class="msg">转移</div>
 					<div class="form-group">
-						<label for="call" class="col-xs-4 control-label left">退回理由</label>
+						<label class="col-xs-12 control-label left">把客资转移给</label>
+						<div class="col-xs-6">
+							<input type="text" class="form-control" placeholder="组别">
+						</div>
+            <div class="col-xs-6">
+							<input type="text" class="form-control" placeholder="人员">
+						</div>
+					</div>
+          <div class="form-group">
+						<label for="call" class="col-xs-12 control-label left">转移理由</label>
 						<div class="col-xs-12">
-							<textarea class="form-control" rows="3"></textarea>
+              <textarea class="form-control" rows="3"></textarea>
 						</div>
 					</div>
 					<div class="operate col-xs-10 col-xs-offset-1">
