--- a/yaoyue/operate-zhuanyi.html
+++ b/yaoyue/operate-zhuanyi.html
@@ -1,11 +1,7 @@
-<link rel="import" href="../components/head.html?__inline">
-
-<link rel="import" href="../components/common-header.html?__inline">
-
-<link rel="import" href="../components/menu-yaoyue.html?__inline">
+<link rel="import" href="../components/head-iframe.html?__inline">
 
 <div class="container">
-  <div class="panel panel-primary">
+	<div class="panel panel-primary">
 		<div class="panel-body">
 			<div class="operate-message">
 				<form action="list.html" class="form-horizontal form" role="form">
@@ -13,16 +9,16 @@
 					<div class="form-group">
 						<label class="col-xs-12 control-label left">把客资转移给</label>
 						<div class="col-xs-6">
-							<input type="text" class="form-control">
+							<input type="text" class="form-control" placeholder="组别">
 						</div>
-            <div class="col-xs-6">
-							<input type="text" class="form-control">
+						<div class="col-xs-6">
+							<input type="text" class="form-control" placeholder="人员">
 						</div>
 					</div>
-          <div class="form-group">
+					<div class="form-group">
 						<label for="call" class="col-xs-12 control-label left">转移理由</label>
 						<div class="col-xs-12">
-              <textarea class="form-control" rows="3"></textarea>
+							<textarea class="form-control" rows="3"></textarea>
 						</div>
 					</div>
 					<div class="operate col-xs-10 col-xs-offset-1">
@@ -34,4 +30,4 @@
 	</div>
 </div>
 
-<link rel="import" href="../components/foot.html?__inline">
+<link rel="import" href="../components/foot-iframe.html?__inline">
