--- a/zhuake/index.html
+++ b/zhuake/index.html
@@ -28,7 +28,7 @@
 		</a>
 	</div>
 
-	<iframe id="iframe" name="iframe" src="detail.html?id=bd7666a8-57b0-4e3e-83f8-3923fad26800" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+	<iframe id="iframe" name="iframe" src="add.html" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
 
 <script>
   // console.log(api.userInfo);
@@ -39,5 +39,5 @@
 
 <link rel="import" href="../components/foot.html?__inline">
 
-<!--detail.html?id=bd7666a8-57b0-4e3e-83f8-3923fad26800-->
+<!-- detail.html?id=156494e4-57a6-4cc4-98e6-7856875f9e08 -->
 	
