--- a/yaoyue/detail.html
+++ b/yaoyue/detail.html
@@ -1,13 +1,1 @@
-<link rel="import" href="../components/head-iframe.html?__inline">
-
-<div class="container">
-	<div class="map-head"><span class="vertical-line"></span>客资详情</div>
-  <link rel="import" href="../components/detail-operations.html?__inline">
-  <link rel="import" href="../components/detail-status.html?__inline">
-  <p class="margin-top-10">客资详细情况</p>
-  <link rel="import" href="../components/detail-zhuake.html?__inline">
-  <link rel="import" href="../components/detail-yaoyue.html?__inline">
-  <link rel="import" href="../components/detail-menshi.html?__inline">
-</div>
-
-<link rel="import" href="../components/foot-iframe.html?__inline">
+<link rel="import" href="../components/detail.html?__inline">
