--- a/yaoyue/add.html
+++ b/yaoyue/add.html
@@ -96,7 +96,7 @@
 								$('input[name=wechat1]').val(obj.wechat1);
 								$('input[name=qq1]').val(obj.qq1);
 								$('input[name=name_flag]').val(obj.name_flag);
-								$('input[name=zkrecord]').val(obj.zkrecord);
+								$('textarea[name=zkrecord]').val(obj.zkrecord);
 							}else{
 								alert(data.retMsg);
 							}
