--- a/zhuake/add.html
+++ b/zhuake/add.html
@@ -10,7 +10,7 @@
             <span class="icon glyphicon glyphicon-search"></span> 称呼
           </label>
 					<div class="col-xs-8 no-padding-left">
-						<input name="name1" type="text" class="form-control">
+						<input name="name" type="text" class="form-control">
 					</div>
 				</div>
 				<div class="form-group">
@@ -22,7 +22,7 @@
             </select>
 					</div>
 					<div class="col-xs-4 no-padding-left">
-						<select name="channel_id2" class="form-control">
+						<select name="channel_way_id" class="form-control">
             </select>
 					</div>
 				</div>
@@ -56,7 +56,7 @@
             <span class="icon glyphicon glyphicon-search"></span> 手机
           </label>
 					<div class="col-xs-8 no-padding-left">
-						<input name="tel1" type="text" class="form-control">
+						<input name="tel" type="text" class="form-control">
 					</div>
 				</div>
 				<div class="form-group">
@@ -64,7 +64,7 @@
             <span class="icon glyphicon glyphicon-search"></span> 微信
           </label>
 					<div class="col-xs-8 no-padding-left">
-						<input name="wechat1" type="text" class="form-control">
+						<input name="wechat" type="text" class="form-control">
 					</div>
 				</div>
 				<div class="form-group">
@@ -72,7 +72,7 @@
             <span class="icon glyphicon glyphicon-search"></span> Q Q
           </label>
 					<div class="col-xs-8 no-padding-left">
-						<input name="qq1" type="text" class="form-control">
+						<input name="qq" type="text" class="form-control">
 					</div>
 				</div>
 				<div class="form-group">
@@ -122,20 +122,20 @@
 						api.getObject('BusCustomer', customerUuid, function(data){
 							if(data.retMsg == 'OK'){
 								var obj = data.retVal;
-								$('input[name=name1]').val(obj.name1);
+								$('input[name=name]').val(obj.name1);
 								$('select[name=channel_id]').val(obj.channel_id);
 								$('select[name=location_id]').val(obj.location_id);
 								$('select[name=customer_flag]').val(obj.customer_flag);
-								$('input[name=tel1]').val(obj.tel1);
-								$('input[name=wechat1]').val(obj.wechat1);
-								$('input[name=qq1]').val(obj.qq1);
+								$('input[name=tel]').val(obj.tel1);
+								$('input[name=wechat]').val(obj.wechat1);
+								$('input[name=qq]').val(obj.qq1);
 								$('input[name=name_flag]').val(obj.name_flag);
-								$('input[name=zkrecord]').val(obj.zkrecord);
+								$('textarea[name=zkrecord]').val(obj.zkrecord);
 							}else{
 								alert(data.retMsg);
 							}
 						});
-					}			
+					}
 				}
 			}, 1000);
 
@@ -145,6 +145,18 @@
 		channelLoaded = true;
   });
 
+	// 渠道方式级联更改
+	$('select[name=channel_id]').change(function(){
+		$('select[name=channel_way_id]').val();
+		// 渠道方式
+		api.listIdAndNameNoToken('BusChannelWay', {
+			channel_id: $(this).val()
+		}, function(options){
+			$('select[name=channel_way_id]').html(options);
+		});
+	});
+	
+
   // 地区
   api.listIdAndName('BusLocation', function(options){
     $('select[name=location_id]').append(options);
@@ -153,12 +165,18 @@
   
   // 表单提交
   $('#form').submit(function(){
-    var params = {},
-        values = $("#form").serializeArray();
+    var params = {};
     // 表单数据
-    $.each(values, function(index,item){
-      params[item.name] = item.value;
-    });
+		params['name1'] = $('input[name=name]').val();
+		params['channel_id'] = $('select[name=channel_id]').val();
+		params['channel_way_id'] = $('select[name=channel_way_id]').val();
+		params['location_id'] = $('select[name=location_id]').val();
+		params['customer_flag'] = $('select[name=customer_flag]').val();
+		params['tel1'] = $('input[name=tel]').val();
+		params['wechat1'] = $('input[name=wechat]').val();
+		params['qq1'] = $('input[name=qq]').val();
+		params['name_flag'] = $('input[name=name_flag]').val();
+		params['zkrecord'] = $('textarea[name=zkrecord]').val();
 		// 如果是更新
 		if(type == 'update'){
 			params['uuid'] = customerUuid;
@@ -166,14 +184,12 @@
 			// 非更新需要额外数据
 			params['customer_service_id'] = api.userInfo.userUuid;
 			params['zkcreate_time'] = new Date().getTime();
-			params['customer_status'] = 1;
+			params['customer_user_status'] = 1;
 		}
     // 调用接口
-		// window.location.href = 'add-success.html?id=1750d7af-d6e9-436a-8d81-d844fe2b275c';return false;
     api.saveObject('BusCustomer', params, function(data){
-      console.log(data);
 			if(data.retMsg == 'OK'){
-				// window.location.href = 'add-success.html';
+				window.location.href = 'add-success.html?id='+data.retVal.uuid;
 			}else{
 				alert(data.retMsg);
 			}
