fix: 修复iframe嵌套导致的高度自适应问题

--- a/yaoyue/add.html
+++ b/yaoyue/add.html
@@ -69,6 +69,10 @@
 <link rel="import" href="../components/link-datepicker-foot.html?__inline">
 
 <script>
+	iframe.init();
+</script>
+
+<script>
 	var type = request.getParam('type'),
 			customerUuid = request.getParam('id');
 		
