--- a/yaoyue/index.html
+++ b/yaoyue/index.html
@@ -28,7 +28,7 @@
 		</a>
 	</div>
 
-	<iframe id="iframe" name="iframe" src="add.html" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+	<iframe id="iframe" name="iframe" src="new.html" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
 
 <script>
   // console.log(api.userInfo);
