--- a/yaoyue/new.html
+++ b/yaoyue/new.html
@@ -24,6 +24,10 @@
 </div>
 
 <script>
+	iframe.init();
+</script>
+
+<script>
   function addNewCustomer(){
     var newObj = $('.new-customer-message-container').eq(0).clone();
     newObj.find('.info').html('<p>发送时间：2016-09-09 12:00</p><p>来源：抓客客服-sdffd</p><p>渠道：官网-百度2</p>');
