--- a/zhuake/add.html
+++ b/zhuake/add.html
@@ -103,6 +103,10 @@
 </div>
 
 <script>
+	iframe.init();
+</script>
+
+<script>
 	var type = request.getParam('type'),
 			customerUuid = request.getParam('id');
 		
