--- a/zhuake/list.html
+++ b/zhuake/list.html
@@ -28,6 +28,10 @@
 </div>
 
 <script>
+	iframe.init();
+</script>
+
+<script>
   var searchParams =  {
     customer_service_id: api.userInfo.userUuid
   },
