--- a/zhuake/mine-data.html
+++ b/zhuake/mine-data.html
@@ -44,6 +44,9 @@
 </table>
 
 <script>
+	iframe.init();
+</script>
+<script>
   $('.date-filter-btn').click(function(){
     $('.date-filter-btn').removeClass('btn-primary').addClass('btn-default');
     $(this).addClass('btn-primary');
