--- a/zhuake/mine-info.html
+++ b/zhuake/mine-info.html
@@ -1,5 +1,9 @@
 <link rel="import" href="../components/head-iframe.html?__inline">
 
 	Info 未知界面
+	
+<script>
+	iframe.init();
+</script>
 
 <link rel="import" href="../components/foot-iframe.html?__inline">
