--- a/zhuake/mine.html
+++ b/zhuake/mine.html
@@ -13,7 +13,7 @@
 		</div>
 	</div>
 
-	<iframe id="iframe" name="iframe2" src="mine-data.html" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+	<iframe id="iframe" name="iframe2" src="mine-info.html" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
 
 </div>
 
