--- a/zhuake/operate-zhiding.html
+++ b/zhuake/operate-zhiding.html
@@ -5,6 +5,9 @@
 </div>
 
 <script>
+	iframe.init();
+</script>
+<script>
   var customerUuid = request.getParam('id');
   console.log(customerUuid);
 </script>
