--- a/menshi/list.html
+++ b/menshi/list.html
@@ -78,6 +78,10 @@
 </div>
 
 <script>
+	iframe.init();
+</script>
+
+<script>
   $('.date-filter-btn').click(function(){
     $('.date-filter-btn').removeClass('btn-primary').addClass('btn-default');
     $(this).addClass('btn-primary');
