--- a/yaoyue/mine-data.html
+++ b/yaoyue/mine-data.html
@@ -55,6 +55,10 @@
 </table>
 
 <script>
+	iframe.init();
+</script>
+
+<script>
   $('.date-filter-btn').click(function(){
     $('.date-filter-btn').removeClass('btn-primary').addClass('btn-default');
     $(this).addClass('btn-primary');
