--- a/yaoyue/mine-target.html
+++ b/yaoyue/mine-target.html
@@ -1,46 +1,50 @@
 <link rel="import" href="../components/head-iframe.html?__inline">
 
-	<p>设置本月的目标</p>
-	<div class="panel panel-primary">
-		<div class="panel-body">
-			<form action="mine.html" class="form-horizontal" role="form">
-				<div class="form-group">
-					<label for="call" class="col-xs-4 control-label">报备有效客资</label>
-					<div class="col-xs-8">
-						<input type="text" class="form-control" id="call">
-					</div>
+<p>设置本月的目标</p>
+<div class="panel panel-primary">
+	<div class="panel-body">
+		<form action="mine.html" class="form-horizontal" role="form">
+			<div class="form-group">
+				<label for="call" class="col-xs-4 control-label">报备有效客资</label>
+				<div class="col-xs-8">
+					<input type="text" class="form-control" id="call">
 				</div>
-				<div class="form-group">
-					<label for="call" class="col-xs-4 control-label">邀约到店数</label>
-					<div class="col-xs-8">
-						<input type="text" class="form-control" id="call">
-					</div>
+			</div>
+			<div class="form-group">
+				<label for="call" class="col-xs-4 control-label">邀约到店数</label>
+				<div class="col-xs-8">
+					<input type="text" class="form-control" id="call">
 				</div>
-				<div class="form-group">
-					<label for="call" class="col-xs-4 control-label">网络成交数</label>
-					<div class="col-xs-8">
-						<input type="text" class="form-control" id="call">
-					</div>
+			</div>
+			<div class="form-group">
+				<label for="call" class="col-xs-4 control-label">网络成交数</label>
+				<div class="col-xs-8">
+					<input type="text" class="form-control" id="call">
 				</div>
-				<div class="form-group">
-					<label for="call" class="col-xs-4 control-label">总订单数</label>
-					<div class="col-xs-8">
-						<input type="text" class="form-control" id="call">
-					</div>
+			</div>
+			<div class="form-group">
+				<label for="call" class="col-xs-4 control-label">总订单数</label>
+				<div class="col-xs-8">
+					<input type="text" class="form-control" id="call">
 				</div>
-				<div class="form-group">
-					<label for="call" class="col-xs-4 control-label">邀约到店率</label>
-					<div class="col-xs-8">
-						<input type="text" class="form-control" id="call">
-					</div>
+			</div>
+			<div class="form-group">
+				<label for="call" class="col-xs-4 control-label">邀约到店率</label>
+				<div class="col-xs-8">
+					<input type="text" class="form-control" id="call">
 				</div>
-				<div class="form-group">
-					<div class="col-xs-offset-2 col-xs-8">
-						<input type="submit" class="btn btn-primary btn-block" value="保存">
-					</div>
+			</div>
+			<div class="form-group">
+				<div class="col-xs-offset-2 col-xs-8">
+					<input type="submit" class="btn btn-primary btn-block" value="保存">
 				</div>
-			</form>
-		</div>
+			</div>
+		</form>
 	</div>
+</div>
+
+<script>
+	iframe.init();
+</script>
 
 <link rel="import" href="../components/foot-iframe.html?__inline">
